# manipulator

./: README.md
CAD/: solidwork_parts_assembly.rar
MATLAB/: graphs_2.m  workspace_plots.mat
MATLAB/rosbag_pose1/: manipulator_vision-transformed_pose.csv
MATLAB/rosbag_pose2/: manipulator-raspberry-joint_command.csv  manipulator_vision-transformed_pose.csv
MATLAB/rosbag_pose3/: manipulator-raspberry-joint_command.csv  manipulator_vision-transformed_pose.csv
manipulator_description/: package.xml
manipulator_description/config/: joint_names_urdf_remade.yaml
manipulator_description/launch/: display.launch  load.launch
manipulator_description/meshes/: base_link.STL  gripper.STL  link_1.STL  link_2.STL  link_3.STL  mancal_link.STL
manipulator_description/meshes2/: gripper.STL
manipulator_description/meshes3/: gripper.STL  link_1.STL  link_2.STL  link_3.STL  mancal_link.STL
manipulator_description/urdf/: urdf_remade.csv  urdf_remade.gazebo.xacro  urdf_remade.urdf  urdf_remade.urdf.xacro  urdf_remade2.urdf.xacro  urdf_remade3.urdf.xacro
manipulator_hw/: CMakeLists.txt  manipulator_hw_plugin.xml  moveit.rviz  normal_hw_plugin.xml  normalhw_plugin.xml  package.xml
manipulator_hw/config/: controllers.yaml
manipulator_hw/include/manipulator_hw/: manipulator_hw.h  normal_hw.h
manipulator_hw/include/normal_hi/: normal_hw.h
manipulator_hw/launch/: manipulator_hw.launch  normal_hw_main.launch
manipulator_hw/msg/: arm_cmd.msg  telemetry.msg
manipulator_hw/src/: manipulator_hw.cpp  manipulator_hw_node.cpp  normal_hw.cpp  normal_hw_main.cpp
manipulator_planning/: CMakeLists.txt  package.xml
manipulator_planning/config/: manipulator_planning.yaml
manipulator_planning/include/manipulator_planning/: ManipulatorIK.h
manipulator_planning/include/tracik_planning/: ik_tests.h
manipulator_planning/launch/: ik_test.launch  ik_test_class.launch  manipulator_planning.launch
manipulator_planning/rviz/: config.rviz
manipulator_planning/src/: ManipulatorIK.cpp  ik_tests.cpp  ik_tests_main.cpp  manipulator_planning_node.cpp
manipulator_planning/test/: ik_tests.cpp  ik_tests_class.cpp
manipulator_vision/: CMakeLists.txt  package.xml
manipulator_vision/launch/: empty_world.launch  manipulator_vision.launch
manipulator_vision/scripts/: parseserial3D.py
manipulator_vision/src/: manipulator_vision_node.cpp  manipulator_vision_node_2.cpp  manipulator_vision_trans.cpp
