<?xml version="1.0"?>
<package format="2">
  <name>manipulator_hw</name>
  <version>0.0.0</version>
  <description>The manipulator_hw package</description>

  <maintainer email="daniela@todo.todo">daniela</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

    <!-- The export tag contains other, unspecified, tags -->

  <export>
    <!-- Other tools can request additional information be placed here -->
    <hardware_interface plugin="${prefix}/normalhw_plugin.xml"/>
  </export>


  <build_depend>cmake_modules</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>message_generation</exec_depend>

  <depend>my_roscpp_library</depend>


</package>
