<?xml version="1.0"?>
<package  format="2">
  <name>manipulator_planning</name>
  <version>0.0.0</version>
  <description>The manipulator_planning package</description>

  <maintainer email="danielaluz12@usp.br">Daniela Luz</maintainer>
  <license>BSD</license>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>kdl_conversions</build_depend>

  <exec_depend>kdl_conversions</exec_depend>
  <exec_depend>trac_ik_lib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>manipulator_vision</depend>
  <depend>manipulator_hw</depend>
  <depend>manipulator_description</depend>
  <depend>trajectory_msgs</depend>
  
</package>
